--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
 <head>
   <titl>Cat Perry's Favorite Cats</titl>
-  <link rel=""
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"> <!-- This is a link tag -->
    </head>
 <body></body>
 </html>
