--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   
 <head>
-  <titl>Cat Perry's Favorite Cats</titl>
+  <title>Cat Perry's Favorite Cats</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"> <!-- This is a link tag -->
    </head>
 <body></body>
