Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   
 <head>
   <title>Cat Perry's Favorite Cats</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"> <!-- This is a link tag -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.cssleaThis is a link tag -->
    </head>
 <body></body>
 </html>
 
-<
